UtahLiveDataTest/src/objects/ProgramBudgetCategory__c.object
<CustomObject>
    <description>Junction Object for Program and Budget Category</description>
    <fields>
        <fullName>BudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Budget Category</description>
        <label>Budget Category</label>
        <referenceTo>BudgetCategory__c</referenceTo>
        <relationshipLabel>Program Budget Categories</relationshipLabel>
        <relationshipName>ProgramBudgetCategories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HideProgramEdit__c</fullName>
        <formula>NOT(ISPICKVAL(Program__r.Status__c,&apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Program Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Program Budget Categories</relationshipLabel>
        <relationshipName>ProgramBudgetCategories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RowNumber__c</fullName>
        <formula>BudgetCategory__r.RowsNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Row Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Program Budget Category</label>
    <nameField>
        <displayFormat>PB-{0000}</displayFormat>
        <label>Program Budget Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Budget Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>